# mangoapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
mangoapi/: __init__.py  app.py  cli.py  router.py  utils.py
mangoapi/templates/: swagger.html
