[metadata]
name = mangoapi
version = 0.1.0
author = Leandro Carriego
author_email = leandro.carriego@mendrisoftware.com
description = Modern lightweight framework for building async APIs on top of Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leandrocarriego/mangoapi
project_urls =
    Bug Tracker = https://github.com/leandrocarriego/mangoapi/issues

classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=3.11
install_requires =
    Django>=4.2
    starlette>=0.47.0
    uvicorn>=0.34.3
entry_points =
    console_scripts =
        mangoapi = mangoapi.cli:main
